--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,193 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.android.favoritetoys.Main2Activity"
-    tools:showIn="@layout/activity_main2">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom"
+        app:itemBackground="@color/bnv_color"
+        app:itemIconTint="@drawable/bottom_navigation_color_selector"
+        app:itemTextColor="@drawable/bottom_navigation_color_selector"
+        app:menu="@menu/menu_bottom_navigation_items" />
+
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/coordinatorLayoutbnv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/bottom_navigation"
+        android:layout_alignParentTop="true">
+
+        <android.support.design.widget.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <android.support.v7.widget.Toolbar
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:background="#00f5f5f5"
+                android:minHeight="?attr/actionBarSize"
+                app:titleTextColor="@android:color/white"
+                android:id="@+id/toolbar">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:id="@+id/text"
+                android:textColor="#ffffff"
+                android:textSize="18sp"
+                android:text="Profile"/>
+
+        </android.support.v7.widget.Toolbar>
+    </android.support.design.widget.AppBarLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+
+        <LinearLayout
+            android:id="@+id/under_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="0dp"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <FrameLayout
+                android:id="@+id/frame"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:layout_margin="0dp">
+
+                <FrameLayout
+                    android:id="@+id/gradient_frameLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="250dp"
+                    android:layout_margin="0dp">
+
+                    <ImageView
+                        android:id="@+id/coverimage"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/coverimage" />
+
+
+
+
+            </FrameLayout>
+
+
+            <de.hdodenhof.circleimageview.CircleImageView
+
+                android:id="@+id/profilepic"
+                android:layout_width="108dp"
+                android:layout_height="108dp"
+                android:layout_gravity="bottom|center_horizontal"
+                android:scaleType="centerCrop"
+                android:src="@drawable/profilepic"
+                app:civ_border_color="#0d0d0d"
+                app:civ_border_width="1dp" />
+
+            <FrameLayout
+                android:id="@+id/frame_blur"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:layout_margin="0dp"
+                android:visibility="invisible">
+
+                <FrameLayout
+                    android:layout_width="108dp"
+                    android:layout_height="108dp"
+                    android:layout_gravity="bottom|center_horizontal"
+                    android:clickable="true">
+
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/profilepic_camera"
+                        android:layout_width="108dp"
+                        android:layout_height="108dp"
+                        android:layout_gravity="bottom|center_horizontal"
+                        android:scaleType="centerCrop"
+                        android:src="#53ffffff"
+                        app:civ_border_color="#0d0d0d"
+                        app:civ_border_width="1dp" />
+
+
+                </FrameLayout>
+
+
+            </FrameLayout>
+
+
+        </FrameLayout>
+
+
+        <Button
+            android:id="@+id/edit_button"
+            android:layout_width="150dp"
+            android:layout_height="36dp"
+            android:layout_gravity="center"
+            android:layout_marginBottom="4dp"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/button_shape"
+            android:clickable="true"
+            android:text="+Follow"
+            android:textColor="@android:color/black" />
+
+
+        <TextView
+            android:id="@+id/about_author"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="2dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginRight="2dp"
+            android:fontFamily="sans-serif-smallcaps"
+            android:text="Aditi Soni"
+            android:textAlignment="center"
+            android:textColor="@android:color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+
+        <LinearLayout
+            android:id="@+id/info_author"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/followers"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ellipsize="end"
+                android:fontFamily="sans-serif-smallcaps"
+                android:text="I am Aditi Soni, Google developers Group Indore team member. I am also leading Women Techmakers Indore. I mainly do Android App Development. I am currently pursuing my Undergrad degree from Shri Vaishnav Institute of Technology and Science Indore."
+                android:textAlignment="center"
+                android:textColor="@android:color/black" />
+            />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+</LinearLayout>
+
+
+    </android.support.design.widget.CoordinatorLayout>
+
+    </RelativeLayout>
