--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -5,7 +5,8 @@
     <item android:id="@+id/menu_share"
         android:icon="@drawable/ic_group_add_black_24dp"
         app:showAsAction="always"
-        android:orderInCategory="2"/>
+        android:orderInCategory="2"
+        android:title="" />
 
 
 </menu>
